test/files/run/stub-errors/ComplexInnerClass.check
error: newSource1.scala:5: missing or invalid dependency while loading 'class stuberrors.B.BB' in class file 'B.class'.
Already compiled 'class stuberrors.B.BB' requires access to type A in package stuberrors.
Make sure that type A is in your classpath and check for conflicting dependencies with `-Ylog-classpath`.
A full rebuild may help if 'B.class' was compiled against an incompatible version of stuberrors.
        val b = new B
            ^
